# wgpu-lighting

./: Cargo.toml  README.md
ch01/01_blinn_phong_cube/: main.rs
ch01/02_blinn_phong_sphere/: main.rs
ch01/03_blinn_phong_torus/: main.rs
ch01/common/: app.rs  state.rs
ch02/01_directional_light/: app.rs  main.rs  state.rs
ch03/01_point_light/: main.rs  state.rs
ch03/02_fog_effect/: app.rs  main.rs  state.rs
ch04/01_spot_light/: main.rs  state.rs
ch04/02_soft_spot_light/: main.rs  state.rs
ch05/01_pbr/: main.rs  state.rs
ch06/01_shadow/: app.rs  main.rs  state.rs
common/: app.rs
src/: common_instance.rs  lib.rs  vertex_data.rs  wgpu_simplified.rs
